@startuml diagrama-classes
!pragma layout smetana
title Dicionário Libras+ — Diagrama de Classes (Domínio + MVC)

skinparam shadowing false
skinparam classAttributeIconSize 0
skinparam nodesep 30
skinparam ranksep 50
skinparam defaultFontName Helvetica
hide circle
hide empty members

' ======================= ENUMERAÇÕES =======================
together {
  enum Papel {
    VISITANTE
    COLABORADOR
    REVISOR
    ADMINISTRADOR
  }
  enum StatusSinal {
    RASCUNHO
    PENDENTE
    APROVADO
    REJEITADO
    PUBLICADO
  }
  enum ClassificacaoSinal {
    UMA_MAO
    DOIS_MOVIMENTOS_DIFERENTES
    DOIS_MOVIMENTOS_IGUAIS
    MOVIMENTOS_DA_FACE
  }
  enum PontoArticulacao {
    CABECA
    OLHOS
    PEITO
    CINTURA
    BRACOS
    MAOS
  }
  enum OrigemSinal {
    nacional
    regional
    estrangeira
  }
  enum DecisaoRevisao {
    APROVADO
    REJEITADO
  }
}

' ======================= MODELOS (DOMÍNIO) =======================
class Usuario {
  +id: UUID
  +nome: string
  +email: string
  -senhaHash: string
  +papel: Papel
  +ativo: boolean
  --
  +pode(p: Permissao): boolean
  +ehAdministrador(): boolean
  +toPublic(): UsuarioPublico
}

class Sinal {
  +id: UUID
  +palavra: string
  +numero: int
  +acepcao: string
  +exemplo: string
  +classeGramatical: ClasseGramatical
  +origem: OrigemSinal
  +status: StatusSinal
  +pontoArticulacao: PontoArticulacao
  +configuracaoMao: string
  +classificacao: ClassificacaoSinal
  --
  +estaPublicado(): boolean
  +aplicarTransicao(acao): StatusSinal
}

class VarianteSinal {
  +id: UUID
  +regiao: string
  +videoUrl: string
  +descricao: string
}
class Assunto {
  +id: UUID
  +nome: string
}
class Video {
  +id: UUID
  +url: string
  +legendaUrl: string
  +duracaoSeg: int
}
class Revisao {
  +id: UUID
  +decisao: DecisaoRevisao
  +comentario: string
  +data: datetime
}
class ConsentRecord {
  +id: UUID
  +tipoDado: TipoDadoSensivel
  +contemMenor: boolean
  +consentimentoConcedido: boolean
}
class AuditLog {
  +id: UUID
  +acao: string
  +entidade: string
  +dataHora: datetime
}

' ======================= RELACIONAMENTOS DE DOMÍNIO =======================
Usuario "1" --> "*" Sinal : cria
Usuario "1" --> "*" Revisao : revisa
Sinal "1" *-- "*" VarianteSinal
Sinal "1" *-- "*" Video
VarianteSinal "1" o-- "*" Video
Sinal "*" -- "*" Assunto
Sinal "1" --> "*" Revisao
Usuario "1" --> "*" ConsentRecord
Usuario "1" --> "*" AuditLog

Usuario ..> Papel
Sinal ..> StatusSinal
Sinal ..> ClassificacaoSinal
Sinal ..> PontoArticulacao
Sinal ..> OrigemSinal
Revisao ..> DecisaoRevisao

' ======================= CAMADAS MVC =======================
package "Controller" #F4F6F8 {
  class PublicController
  class AuthController
  class ColaboradorController
  class RevisaoController
  class AdminController
}
package "Service (casos de uso)" #EAF1FB {
  class AuthService {
    +registrar(): Usuario
    +autenticar(): Usuario
  }
  class SinalService {
    +buscarPublicados()
    +submeter(): Sinal
    +aprovar(): Sinal
    +rejeitar(): Sinal
    +editar(): Sinal
    +excluir()
  }
  class UsuarioService {
    +criar(): Usuario
    +atualizar(): Usuario
    +excluir()
  }
}
package "Repository (dados)" #EFF7EF {
  class UsuarioRepository
  class SinalRepository
  class RevisaoRepository
  class AssuntoRepository
  class AuditLogRepository
  class ConsentRepository
}

' ======================= DEPENDÊNCIAS MVC =======================
PublicController ..> SinalService
AuthController ..> AuthService
ColaboradorController ..> SinalService
RevisaoController ..> SinalService
AdminController ..> SinalService
AdminController ..> UsuarioService

AuthService ..> UsuarioRepository
UsuarioService ..> UsuarioRepository
SinalService ..> SinalRepository
SinalService ..> RevisaoRepository
SinalService ..> AuditLogRepository
SinalService ..> ConsentRepository

SinalRepository ..> Sinal
UsuarioRepository ..> Usuario
@enduml
